fix touch on ios

--- a/src/handlers/findnelp/_FindNelpDetailHandler.scss
+++ b/src/handlers/findnelp/_FindNelpDetailHandler.scss
@@ -18,6 +18,7 @@
         margin: 0 1rem;
         border: 2px solid #fff;
         background-size: cover;
+        background-position: center;
       }
 
       .username {
